# revou-ai-agent-milestone-project-1

./: INSTALL.md  README.md  System_Flow_Diagram.md  env.template  main.py  monitoring.db  pyproject.toml
data/: asset_class_mapping.json  sample_transaction_pairs.csv
examples/: sample_journal_types.json  sample_journal_types.txt  sample_transaction_data.csv  sample_transaction_data.json  sample_transaction_data.txt
pages/: 1_📊_Vector_Embeddings.py  2_📋_Journal_Setup.py  3_📖_Definition_Search.py  4_📊_Monitoring_Dashboard.py  5_🤖_LangGraph_Workflows.py
pages/api/: check.ts
src/: __init__.py  config.py
src/processors/: __init__.py  ai_processor.py  brave_processor.py  langgraph_processor.py  pdf_processor.py  text_processor.py
src/services/: __init__.py  agent_personas.py  api_client.py  cot_visualizer.py  feedback_system.py  guardrails.py  langgraph_service.py  monitoring.py  openai_service.py  vector_db.py  voice_service.py
src/ui/: __init__.py  components.py
